@@ -11,6 +11,9 @@
     - Catalyst::Test::local_request sets ->request on the response.
     - Require HTTP::Request 5.814 and HTTP::Response 5.813 from LWP 5.814
       to avoid test fails.
+    - Log flush moved to the end of setup so that roles and plugins which
+      hook setup_finalize can log things and have them appear in application
+      startup, rather than with the first hit.
 
   Documentation:
     - Document no-args call to $c->uri_for.
@@ -23,6 +26,14 @@
       proper PATH_INFO and SCRIPT_NAME processing for non-root applications
     - Enable Catalyst::Utils::home() to find home within Dist::Zilla built
       distributions
+
+  Refactoring / cleanups:
+    - Remove documentation for the case_sensitive setting
+    - Warning is now emitted at application startup if the case_sensitive
+      setting is turned on. This setting is not used by anyone, not
+      believed to be useful and adds unnecessary complexity to controllers
+      and the dispatcher. If you are using this setting and have good reasons
+      why it should stay then you need to be shouting, now.
 
 5.80013 2009-09-17 11:07:04
 
